--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -33,7 +33,8 @@
         android:id="@+id/list_none_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginTop="64dp"
+        android:layout_gravity="center_horizontal"
         android:visibility="gone"
         android:src="@drawable/ic_figure_state_empty"
         tools:visibility="visible"
