--- a/app/src/main/res/drawable/rectangle_material.xml
+++ b/app/src/main/res/drawable/rectangle_material.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/gray_cd"
     >
 
-    <solid
-        android:color="@color/white"
-        />
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle" >
+            <solid android:color="@color/gray_cd" />
+            <corners android:radius="5dp" />
+            <padding
+                android:top="8dp"
+                android:bottom="8dp"
+                android:left="8dp"
+                android:right="8dp"
+                />
+        </shape>
+    </item>
 
-    <corners
-        android:radius="5dp"
-        />
-
-    <padding
-        android:top="8dp"
-        android:bottom="8dp"
-        android:left="8dp"
-        android:right="8dp"
-        />
-
-</shape>
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle" >
+            <solid android:color="@color/white" />
+            <corners android:radius="5dp" />
+            <padding
+                android:top="8dp"
+                android:bottom="8dp"
+                android:left="8dp"
+                android:right="8dp"
+                />
+        </shape>
+    </item>
+</ripple>
