--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -232,6 +232,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_directions_grey"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
                     android:text="@string/dialog_navigate"
                     android:theme="@style/WhiteColorButton"
                     />
@@ -241,6 +243,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_bookmark_grey"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
                     android:text="@string/add_to_bookmark"
                     android:theme="@style/WhiteColorButton"
                     android:visibility="gone"
