rewrite MapsPresenter from Java to Kotlin
  - Add shadow effect above the list and detail view.
  - According to above, a new shadow drawable has been added.
  - In order to contain the shadow, add new fragment_detail layout
    to set shadow above top of ScrollView

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -53,4 +53,11 @@
         android:text="@string/no_any_coffee_shop"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:layout_gravity="top"
+        android:background="@drawable/bottom_view_shadow"
+        />
+
 </FrameLayout>
