Upgrade Google Map Android SDK to 3.0.0 beta

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,4 +1,4 @@
-<com.google.android.gms.maps.MapView
+<com.google.android.libraries.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map_view"
