--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="textSizeSmaller">11sp</dimen>
     <dimen name="store_panel_anchor_offset">220dp</dimen>
+
+    <dimen name="round_corner">10dp</dimen>
 </resources>
