--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
@@ -16,8 +16,11 @@
     </style>
 
     <!-- Splash -->
-    <style name="AppTheme.Launcher">
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/splash</item>
+        <item name="windowSplashScreenBackground">@color/gray_f5</item>
+        <item name="postSplashScreenTheme">@style/AppTheme.Translucent</item>
     </style>
 
     <!-- Dialog theme -->
